[gd_scene load_steps=10 format=4 uid="uid://h7y0pnty6wvw"]

[ext_resource type="TileSet" uid="uid://bgq8kvn5xhwie" path="res://tileset/princess_island.tres" id="1_20ac1"]
[ext_resource type="Script" uid="uid://c03yfgoa34cv8" path="res://scenes/boss_01_scene.gd" id="1_ujhkj"]
[ext_resource type="PackedScene" uid="uid://cldhictj5kcpi" path="res://scenes/NPC/knight.tscn" id="2_i7fcq"]
[ext_resource type="PackedScene" uid="uid://d3be27xqupv8d" path="res://scenes/enemies/slime_purple.tscn" id="3_inwwd"]
[ext_resource type="AudioStream" uid="uid://yr4vd0w74kco" path="res://assets/music/05 - Battle 1.mp3" id="4_sow1i"]
[ext_resource type="PackedScene" uid="uid://dqh67sat8kl11" path="res://scenes/items/door.tscn" id="5_pnqad"]
[ext_resource type="PackedScene" uid="uid://cml20mwiesdyq" path="res://scenes/HUD_layer.tscn" id="7_loal8"]
[ext_resource type="AudioStream" uid="uid://cbgr48n74un7w" path="res://assets/Sprout village Assets/Sound/7.mp3" id="8_h7orf"]
[ext_resource type="PackedScene" uid="uid://bvre61c8p2ixw" path="res://scenes/items/box.tscn" id="9_2symi"]

[node name="Boss01Scene" type="Node2D"]
script = ExtResource("1_ujhkj")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAAAA8AAAAAAAAAAAABAA8AAAAAAAAAAAACAA8AAAAAAAAAAAADAA8AAAAAAAAAAAAEAA8AAAAAAAAAAAAFAA8AAAAAAAAAAAAGAA8AAAAAAAAAAAAHAA8AAAAAAAAAAAAIAA8AAAAAAAAAAAAJAA8AAAAAAAAAAAAKAA8AAAAAAAAAAAALAA8AAAAAAAAAAAAMAA8AAAAAAAAAAAANAA8AAAAAAAAAAAAOAA8AAAAAAAAAAAAPAA8AAAAAAAAAAAAQAA8AAAAAAAAAAAARAA8AAAAAAAAAAAASAA8AAAAAAAAAAAATAA8AAAAAAAAAAAAUAA8AAAAAAAAAAAAVAA8AAAAAAAAAAAAWAA8AAAAAAAAAAAAXAA8AAAAAAAAAAAAYAA8AAAAAAAAAAAAZAA8AAAAAAAAAAAAaAA8AAAAAAAAAAAAbAA8AAAAAAAAAAAAcAA8AAAAAAAAAAAAdAA8AAAAAAAAAAAAAABAAAAAAAAEAAAAAABEAAAAAAAEAAAAAABIAAAAAAAEAAAAAABMAAAAAAAEAAAAAABQAAAAAAAEAAAABABAAAAAAAAEAAAABABEAAAAAAAEAAAABABIAAAAAAAEAAAABABMAAAAAAAEAAAABABQAAAAAAAEAAAACABAAAAAAAAEAAAACABEAAAABAAAAAAACABIAAAAAAAEAAAACABMAAAAAAAEAAAACABQAAAAAAAEAAAADABAAAAAAAAEAAAADABEAAAAAAAEAAAADABIAAAAAAAEAAAADABMAAAAAAAEAAAADABQAAAAAAAEAAAAEABAAAAABAAEAAAAEABEAAAAAAAEAAAAEABIAAAAAAAEAAAAEABMAAAAAAAEAAAAEABQAAAAAAAEAAAAFABAAAAAAAAEAAAAFABEAAAAAAAEAAAAFABIAAAAAAAEAAAAFABMAAAAAAAEAAAAFABQAAAAAAAEAAAAGABAAAAAAAAEAAAAGABEAAAAAAAEAAAAGABIAAAAAAAEAAAAGABMAAAAAAAEAAAAGABQAAAAAAAEAAAAHABAAAAAAAAEAAAAHABEAAAAAAAEAAAAHABIAAAAAAAEAAAAHABMAAAAAAAEAAAAHABQAAAAAAAEAAAAIABAAAAAAAAEAAAAIABEAAAAAAAEAAAAIABIAAAABAAAAAAAIABMAAAAAAAEAAAAIABQAAAAAAAEAAAAJABAAAAAAAAEAAAAJABEAAAAAAAEAAAAJABIAAAAAAAEAAAAJABMAAAAAAAEAAAAJABQAAAAAAAEAAAAKABAAAAAAAAEAAAAKABEAAAAAAAEAAAAKABIAAAAAAAEAAAAKABMAAAAAAAEAAAAKABQAAAAAAAEAAAALABAAAAAAAAEAAAALABEAAAAAAAEAAAALABIAAAAAAAEAAAALABMAAAAAAAEAAAALABQAAAAAAAEAAAAMABAAAAABAAAAAAAMABEAAAAAAAEAAAAMABIAAAAAAAEAAAAMABMAAAAAAAEAAAAMABQAAAAAAAEAAAANABAAAAAAAAEAAAANABEAAAAAAAEAAAANABIAAAAAAAEAAAANABMAAAAAAAEAAAANABQAAAAAAAEAAAAOABAAAAAAAAEAAAAOABEAAAAAAAEAAAAOABIAAAAAAAEAAAAOABMAAAAAAAEAAAAOABQAAAAAAAEAAAAPABAAAAAAAAEAAAAPABEAAAAAAAEAAAAPABIAAAAAAAEAAAAPABMAAAAAAAEAAAAPABQAAAAAAAEAAAAQABAAAAAAAAEAAAAQABEAAAAAAAEAAAAQABIAAAAAAAEAAAAQABMAAAAAAAEAAAAQABQAAAAAAAEAAAARABAAAAAAAAEAAAARABEAAAAAAAEAAAARABIAAAAAAAEAAAARABMAAAAAAAEAAAARABQAAAAAAAEAAAASABAAAAAAAAEAAAASABEAAAAAAAEAAAASABIAAAAAAAEAAAASABMAAAAAAAEAAAASABQAAAAAAAEAAAATABAAAAABAAEAAAATABEAAAAAAAEAAAATABIAAAAAAAEAAAATABMAAAAAAAEAAAATABQAAAAAAAEAAAAUABAAAAAAAAEAAAAUABEAAAAAAAEAAAAUABIAAAAAAAEAAAAUABMAAAAAAAEAAAAUABQAAAAAAAEAAAAVABAAAAAAAAEAAAAVABEAAAAAAAEAAAAVABIAAAAAAAEAAAAVABMAAAAAAAEAAAAVABQAAAAAAAEAAAAWABAAAAAAAAEAAAAWABEAAAAAAAEAAAAWABIAAAAAAAEAAAAWABMAAAAAAAEAAAAWABQAAAAAAAEAAAAXABAAAAAAAAEAAAAXABEAAAAAAAEAAAAXABIAAAABAAEAAAAXABMAAAAAAAEAAAAXABQAAAAAAAEAAAAYABAAAAAAAAEAAAAYABEAAAAAAAEAAAAYABIAAAAAAAEAAAAYABMAAAAAAAEAAAAYABQAAAAAAAEAAAAZABAAAAAAAAEAAAAZABEAAAAAAAEAAAAZABIAAAAAAAEAAAAZABMAAAAAAAEAAAAZABQAAAAAAAEAAAAaABAAAAAAAAEAAAAaABEAAAAAAAEAAAAaABIAAAAAAAEAAAAaABMAAAAAAAEAAAAaABQAAAAAAAEAAAAbABAAAAABAAAAAAAbABEAAAAAAAEAAAAbABIAAAAAAAEAAAAbABMAAAAAAAEAAAAbABQAAAAAAAEAAAAcABAAAAAAAAEAAAAcABEAAAAAAAEAAAAcABIAAAAAAAEAAAAcABMAAAAAAAEAAAAcABQAAAAAAAEAAAAdABAAAAAAAAEAAAAdABEAAAAAAAEAAAAdABIAAAAAAAEAAAAdABMAAAAAAAEAAAAdABQAAAAAAAEAAAD//wAAAAAAAAEAAAD//wEAAAAAAAEAAAD//wIAAAAAAAEAAAD//wMAAAAAAAEAAAD//wQAAAAAAAEAAAD//wUAAAAAAAEAAAD//wYAAAAAAAEAAAD//wcAAAAAAAEAAAD//wgAAAAAAAEAAAD//wkAAAAAAAEAAAD//woAAAAAAAEAAAD//wsAAAAAAAEAAAD//wwAAAAAAAEAAAD//w0AAAAAAAEAAAD//w4AAAAAAAEAAAD//w8AAAAAAAEAAAD//xAAAAAAAAEAAAD//xEAAAAAAAEAAAD//xIAAAAAAAEAAAD//xMAAAAAAAEAAAD//xQAAAAAAAEAAAAeAAAAAAAAAAEAAAAeAAEAAAAAAAEAAAAeAAIAAAAAAAEAAAAeAAMAAAAAAAEAAAAeAAQAAAAAAAEAAAAeAAUAAAAAAAEAAAAeAAYAAAAAAAEAAAAeAAcAAAAAAAEAAAAeAAgAAAAAAAEAAAAeAAkAAAAAAAEAAAAeAAoAAAAAAAEAAAAeAAsAAAAAAAEAAAAeAAwAAAAAAAEAAAAeAA0AAAAAAAEAAAAeAA4AAAAAAAEAAAAeAA8AAAAAAAEAAAAeABAAAAAAAAEAAAAeABEAAAAAAAEAAAAeABIAAAAAAAEAAAAeABMAAAAAAAEAAAAeABQAAAAAAAEAAAA=")
tile_set = ExtResource("1_20ac1")

[node name="knight" parent="." instance=ExtResource("2_i7fcq")]
position = Vector2(60, 206)

[node name="SlimePurple" parent="." instance=ExtResource("3_inwwd")]
position = Vector2(344, 240)

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_sow1i")
volume_db = -16.22
autoplay = true
parameters/looping = true

[node name="Door" parent="." instance=ExtResource("5_pnqad")]
position = Vector2(440, 240)
difficulty = "win"

[node name="HUDlayer" parent="." instance=ExtResource("7_loal8")]

[node name="DoorShowSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_h7orf")

[node name="FallBox" parent="." instance=ExtResource("9_2symi")]
position = Vector2(128, 200)

[node name="FallBox2" parent="." instance=ExtResource("9_2symi")]
position = Vector2(320, 200)
